Correct overflow issues and update Contact page

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -11,6 +11,7 @@
   border-radius: 25px;
   padding: 5px;
   white-space: normal;
+  word-wrap: break-word;
   min-width: 250px;
 }
 
